--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
       </button>
       <a id="recipe-label"></a>
     </section>
-    <script src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
