--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
   <body>
     <section id="recipe-section">
       <h2 class="section-heading">Welcome to the Recipe Finder!</h2>
-      <input
-        aria-label="food-input"
-        id="food-input"
-        onchange="handleFoodChange()"
-      />
-      <button id="recipe-button" onclick="handleRecipeClick()">
-        Give me a recipe!
-      </button>
+      <input aria-label="food-input" id="food-input" />
+      <button id="recipe-button">Give me a recipe!</button>
       <a id="recipe-label"></a>
     </section>
     <script type="module" src="./main.js"></script>
