build result list function working

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <button id="recipe-button">Give me a recipe!</button>
       <a id="recipe-label"></a>
     </section>
+    <section id="display-container"></section>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
