--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fetch</title>
+    <link rel="stylesheet" type="text/css" href="/CSS/reset.css" />
+    <link rel="stylesheet" href="/CSS/style.css" />
   </head>
   <body>
     <section id="recipe-section">
-      <h2 class="section-heading">Welcome to the Recipe Finder!</h2>
+      <h2 class="section-heading">Recipesaurus Rex</h2>
       <input aria-label="food-input" id="food-input" />
-      <button id="recipe-button">Give me a recipe!</button>
+      <button id="recipe-button">Search</button>
       <a id="recipe-label"></a>
     </section>
     <section id="display-container"></section>
