weather api and weather based recipe searches implemented

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <section id="recipe-section">
       <h2 class="section-heading">Recipesaurus Rex</h2>
       <input aria-label="food-input" id="food-input" />
-      <button id="recipe-button">Search</button>
-      <a id="recipe-label"></a>
+      <a id="recipe-button">Search</a>
+      <a id="weather-recipe">Go!</a>
     </section>
     <section id="display-container"></section>
     <script type="module" src="./main.js"></script>
