styling layout for cards and single recipes and title

--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
   </head>
   <body>
     <section id="recipe-section">
-      <h2 class="section-heading">Recipesaurus Rex</h2>
-      <input aria-label="food-input" id="food-input" />
-      <a id="recipe-button">Search</a>
-      <a id="weather-recipe">Go!</a>
+      <h1 class="section-heading">Recipesaurus Rex</h1>
+      <h5>Tagline</h5>
+      <div>
+        <input
+          placeholder="Search for a recipe"
+          aria-label="food-input"
+          id="food-input"
+        />
+
+        <a id="recipe-button">Search</a>
+      </div>
+
+      <a id="weather-recipe">Let the weather decide!</a>
     </section>
     <section id="display-container"></section>
     <script type="module" src="./main.js"></script>
