single recipe font changed and changed layout

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="/CSS/style.css" />
   </head>
   <body>
-    <section id="recipe-section">
+    <section class="header" id="recipe-section">
       <h1 class="section-heading">Recipesaurus Rex</h1>
-      <h5>Tagline</h5>
-      <div>
+      <h5>Find the food that makes you go ROAR!</h5>
+      <div class="header__form">
         <input
           placeholder="Search for a recipe"
           aria-label="food-input"
@@ -21,7 +21,7 @@
         <a id="recipe-button">Search</a>
       </div>
 
-      <a id="weather-recipe">Let the weather decide!</a>
+      <a class="btn" id="weather-recipe">Not sure? Let the weather decide!</a>
     </section>
     <section id="display-container"></section>
     <script type="module" src="./main.js"></script>
