--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <section class="header" id="recipe-section">
       <h1 class="section-heading">Recipesaurus Rex</h1>
-      <h5>Find the food that makes you go ROAR!</h5>
+      <h5>Find the food that makes you ROAR!</h5>
       <div class="header__form">
         <input
           placeholder="Search for a recipe"
