search bar styling changed

--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
       <h1 class="section-heading">Recipesaurus Rex</h1>
       <h5>Find the food that makes you ROAR!</h5>
       <div class="header__form">
-        <input
-          placeholder="Search for a recipe"
-          aria-label="food-input"
-          id="food-input"
-        />
+        <div>
+          <input
+            placeholder="Search for a recipe"
+            aria-label="food-input"
+            id="food-input"
+          />
 
-        <a id="recipe-button">Search</a>
+          <a class="btn" id="recipe-button">Search</a>
+        </div>
+        <a class="btn" id="weather-recipe">Not sure? Let the weather decide!</a>
       </div>
-
-      <a class="btn" id="weather-recipe">Not sure? Let the weather decide!</a>
     </section>
     <section id="display-container"></section>
     <script type="module" src="./main.js"></script>
